--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ Authors@R: c(person("F. William", "Townes", email = "will.townes@gmail.com",
 License: Artistic-2.0
 Depends:
     R (>= 3.6),
-    stats
+    stats,
+    methods
 Imports:
     glmpca,
-    SingleCellExperiment
+    SingleCellExperiment,
+    SummarizedExperiment
 Suggests:
     knitr,
     testthat,
@@ -21,4 +23,4 @@ Suggests:
 VignetteBuilder: knitr
 LazyData: false
 BugReports: https://github.com/kstreet/untitled_singlecell/issues
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.0
