renamed 'mod' argument in devianceResiduals to 'fam', to align with GLMPCA argument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(compute_size_factors)
 export(devianceResiduals)
 exportMethods(GLMPCA)
 exportMethods(devianceResiduals)
+import(glmpca)
+importFrom(Matrix,colSums)
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,assay)
