--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,16 @@ export(devianceResiduals)
 exportMethods(GLMPCA)
 exportMethods(devianceResiduals)
 import(glmpca)
+importFrom(MASS,negative.binomial)
 importFrom(Matrix,colSums)
 importFrom(SingleCellExperiment,"reducedDim<-")
+importFrom(SingleCellExperiment,"sizeFactors<-")
+importFrom(SingleCellExperiment,sizeFactors)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,colData)
 importFrom(glmpca,glmpca)
+importFrom(methods,is)
+importFrom(stats,glm)
+importFrom(stats,p.adjust)
+importFrom(stats,pchisq)
