partial, work in progress stuff for deviance and deviance residuals. Fixed warning due to UTF-8 encoding.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,4 @@ VignetteBuilder: knitr
 LazyData: false
 BugReports: https://github.com/kstreet/untitled_singlecell/issues
 RoxygenNote: 7.0.2
+Encoding: UTF-8
