fix some documentation errors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,18 @@
 
 export(GLMPCA)
 export(compute_size_factors)
-export(devianceResiduals)
+export(devianceFeatureSelection)
+export(nullResiduals)
 exportMethods(GLMPCA)
-exportMethods(devianceResiduals)
+exportMethods(devianceFeatureSelection)
+exportMethods(nullResiduals)
 import(glmpca)
-importFrom(MASS,negative.binomial)
 importFrom(Matrix,colSums)
+importFrom(Matrix,rowSums)
 importFrom(SingleCellExperiment,"reducedDim<-")
-importFrom(SingleCellExperiment,"sizeFactors<-")
-importFrom(SingleCellExperiment,sizeFactors)
-importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,"assay<-")
+importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,assay)
-importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
 importFrom(glmpca,glmpca)
 importFrom(methods,is)
-importFrom(stats,glm)
-importFrom(stats,p.adjust)
-importFrom(stats,pchisq)
