added a ton of tests for feature selection. The only thing missing now from tests is the batch effect adjustment. All tests and build checks passing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ exportMethods(devianceFeatureSelection)
 exportMethods(nullResiduals)
 import(glmpca)
 importFrom(Matrix,colSums)
+importFrom(Matrix,t)
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SummarizedExperiment,"assay<-")
 importFrom(SummarizedExperiment,"rowData<-")
