--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,21 @@ export(GLMPCA)
 export(compute_size_factors)
 export(devianceFeatureSelection)
 export(nullResiduals)
+export(predictType)
 exportMethods(GLMPCA)
 exportMethods(devianceFeatureSelection)
 exportMethods(nullResiduals)
+exportMethods(predictType)
 import(glmpca)
+import(rjags)
+import(stats)
 importFrom(Matrix,colSums)
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SummarizedExperiment,"assay<-")
+importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(glmpca,glmpca)
 importFrom(methods,is)
