added codecov token and code to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ r:
   - release
   - devel
 
-##env:
-##  - CODECOV_TOKEN="634b2d1e-bd5d-4348-8b8c-f6027dce7171"
+env:
+  - CODECOV_TOKEN="0f221319-91d1-46a5-94dc-e274b9a6e529"
 
-##r_packages:
-##  - covr
+r_packages:
+  - covr
 
 ## Run code coverage after successful build
-##after_success:
-##  - Rscript -e 'library(covr); codecov()'
+after_success:
+  - Rscript -e 'library(covr); codecov()'
