changed R versions in .travis.yml to bioc-release and bioc-devel

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: r
 r:
-  - oldrel
-  - release
-  - devel
+  - bioc-release
+  - bioc-devel
 
 env:
   - CODECOV_TOKEN="0f221319-91d1-46a5-94dc-e274b9a6e529"
