added .Rbuildignore (to remove notes in R CMD check about hidden files) added jags and BiocGenerics to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Depends:
     stats,
     methods
 Imports:
+    BiocGenerics,
     glmpca,
+    rjags,
     Matrix,
     SingleCellExperiment,
     SummarizedExperiment,
