--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportMethods(predictType)
 import(glmpca)
 import(rjags)
 import(stats)
+importFrom(BiocGenerics,counts)
 importFrom(Matrix,colSums)
 importFrom(Matrix,t)
 importFrom(SingleCellExperiment,"reducedDim<-")
