--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,28 @@
+#----------------------------
+^.git
+README\.md
+NEWS\.md
+
+# Travis-CI et al.
+^\.travis
+^travis-tool\.sh$
+^pkg-build\.sh$
+^appveyor\.yml$
+^covr-utils.R$
+^\.coveralls\.R$
+
+# R related
+^cran-comments\..*$
+^vignettes/.*\.(pdf|PDF)$
+^vignettes/.*\.(r|R)$
+^vignettes/\.install_extras$
+^Makefile$
+^incl
+^NAMESPACE,.*\.txt$
+^nohup.*$
+^\.devel
+^\.test
+^\.check
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^codecov\.yml$
