--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
 r_packages:
   - covr
 
+r_binary_packages:
+  - rjags
+
 ## Run code coverage after successful build
 after_success:
   - Rscript -e 'library(covr); codecov()'
