removed MASS from DESCRIPTION as nothing seems to directly depend on it. Changed tab width (to 4) and enforced max line length (80 char) in featureSelection.R. Changed 1:... to seq_len(...) as needed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,7 @@ Imports:
     rjags,
     Matrix,
     SingleCellExperiment,
-    SummarizedExperiment,
-    MASS
+    SummarizedExperiment
 Suggests:
     knitr,
     testthat,
