--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(person("F. William", "Townes", email = "will.townes@gmail.com",
             role = c("aut", "cre", "cph")),
             person("Kelly", "Street", email = "street.kelly@gmail.com", role="aut"),
             person("Isabella", "Grabski", email = "isabellagrabski@g.harvard.edu", role="aut"))
-License: Artistic-2.0
+License: Artistic-2.0 | file LICENSE
 Depends:
     R (>= 3.6),
     stats,
