added generic function for fitType (which added the new documentation file), minor formatting edits.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(GLMPCA)
 export(compute_size_factors)
 export(devianceFeatureSelection)
+export(fitType)
 export(nullResiduals)
 export(predictType)
 exportMethods(GLMPCA)
 exportMethods(devianceFeatureSelection)
+exportMethods(fitType)
 exportMethods(nullResiduals)
 exportMethods(predictType)
 import(glmpca)
