--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: r
 r:
-  - bioc-release
   - bioc-devel
 
 warnings_are_errors: false
@@ -11,8 +10,8 @@ env:
 r_packages:
   - covr
 
-r_binary_packages:
-  - rjags
+#r_binary_packages:
+#  - rjags
 
 ## Run code coverage after successful build
 after_success:
