--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Suggests:
     DuoClustering2018
 VignetteBuilder: knitr
 LazyData: false
+URL: https://bioconductor.org/packages/scry.html
 BugReports: https://github.com/kstreet13/scry/issues
 RoxygenNote: 7.1.0
 Encoding: UTF-8
