--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,10 @@ exportMethods(GLMPCA)
 exportMethods(devianceFeatureSelection)
 exportMethods(nullResiduals)
 import(glmpca)
+importClassesFrom(DelayedArray,DelayedMatrix)
+importFrom(DelayedArray,colSums)
 importFrom(Matrix,colSums)
+importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SummarizedExperiment,"assay<-")
