cleaning up the nullResiduals code a bit.  - removed duplicate calculation of lambda in poisson case  - moved centering of size factors inside main poisson case  - removed .null_residuals_poisson_delayed, incoporated into poisson case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ exportMethods(GLMPCA)
 exportMethods(devianceFeatureSelection)
 exportMethods(nullResiduals)
 import(glmpca)
+importClassesFrom(BiocSingular,LowRankMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
 importFrom(DelayedArray,colSums)
 importFrom(Matrix,colSums)
