put back changes that were originally in HDF5 but were wiped out by the merge from master (bc master had a revert in it we don't want to carry over to hdf5 branch). HDF5 should be back to where it was but with some changes to glm-pca parts.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(nullResiduals)
 import(glmpca)
 importClassesFrom(BiocSingular,LowRankMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
+importFrom(DelayedArray,colSums)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
