addresses #12 for dense matrix and sparse Matrix objects. Still need to test with DelayedArray. All tests and build check passing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,rowData)
 importFrom(glmpca,glmpca)
+importFrom(methods,as)
 importFrom(methods,is)
