HDF5Array support for devianceFeatureSelection. Includes unit tests and new vignette with timings of different data formats. Changes default assay to 'counts' for feature selection instead of '1'. Changed some import statements and updated documentation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,18 +22,21 @@ Depends:
     stats,
     methods
 Imports:
+    DelayedArray,
     glmpca (>= 0.2.0),
+    HDF5Array,
     Matrix,
     SingleCellExperiment,
     SummarizedExperiment
 Suggests:
     BiocGenerics,
-    knitr,
-    testthat,
     covr,
-    rmarkdown,
+    DuoClustering2018,
     ggplot2,
-    DuoClustering2018
+    knitr,
+    rmarkdown,
+    TENxPBMCData,
+    testthat
 VignetteBuilder: knitr
 LazyData: false
 URL: https://bioconductor.org/packages/scry.html
