added "import SingleCellExperiment" before nullResiduals method for SingleCellExperiment objects, because it wasn't finding the sizeFactors function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(nullResiduals)
 exportMethods(GLMPCA)
 exportMethods(devianceFeatureSelection)
 exportMethods(nullResiduals)
+import(SingleCellExperiment)
 importClassesFrom(BiocSingular,LowRankMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
 importFrom(DelayedArray,colSums)
