Potentially important: we no longer allow for the possibility that p is a matrix in binomial_deviance_residuals. Cleaned up some of the logic in .binomial_deviance_residuals and related tests. Removed second instance of DelayedArray from DESCRIPTION.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,7 @@ Imports:
     Matrix,
     SingleCellExperiment,
     SummarizedExperiment,
-    BiocSingular,
-    DelayedArray
+    BiocSingular
 Suggests:
     BiocGenerics,
     covr,
