added documentation for 'params', version bump to 1.1.2, explicitly import stats for dnbinom, change T/F to TRUE/FALSE, resaved 'params' with 'compress = "xz"' for better compression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ exportMethods(getBarcode)
 exportMethods(nullResiduals)
 exportMethods(trainAllReference)
 import(SingleCellExperiment)
+import(stats)
 importClassesFrom(BiocSingular,LowRankMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
 importFrom(DelayedArray,DelayedArray)
