re-ran document() to update T/F -> TRUE/FALSE in documentation, only explicitly importing dnbinom from stats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ exportMethods(getBarcode)
 exportMethods(nullResiduals)
 exportMethods(trainAllReference)
 import(SingleCellExperiment)
-import(stats)
 importClassesFrom(BiocSingular,LowRankMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
 importFrom(DelayedArray,DelayedArray)
@@ -31,3 +30,4 @@ importFrom(SummarizedExperiment,rowData)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(sads,dpoilog)
+importFrom(stats,dnbinom)
