--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: scry
 Title: Small-Count Analysis Methods for High-Dimensional Data
-Version: 1.5.0
+Version: 1.5.1
 Description: Many modern biological datasets consist of small counts that are 
             not well fit by standard linear-Gaussian methods such as principal
             component analysis. This package provides implementations of 
@@ -30,6 +30,7 @@ Imports:
     SummarizedExperiment,
     BiocSingular
 Suggests:
+    markdown,
     BiocGenerics,
     covr,
     DuoClustering2018,
