fixed sparse to dense conversion caused my matrix division

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importClassesFrom(BiocSingular,LowRankMatrix)
 importClassesFrom(DelayedArray,DelayedMatrix)
 importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedArray,colSums)
+importFrom(Matrix,Diagonal)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
